[add] tgi config

--- a/.env.local
+++ b/.env.local
@@ -57,7 +57,8 @@ MODELS=`[
       "top_k": 50,
       "truncate": 1000,
       "max_new_tokens": 1024
-    }
+    },
+    "endpoints": [{"url": "http://tgi:3000/generate_stream"}]
   }
 ]`
 OLD_MODELS=`[]`# any removed models, `{ name: string, displayName?: string, id?: string }`
